fix(admin,frontend): layout issues (#91)

--- a/admin/src/assets/css/status-filter.css
+++ b/admin/src/assets/css/status-filter.css
@@ -12,7 +12,7 @@ div.status-filter ul.status-list {
   margin: 15px 0 0;
   padding: 0;
   display: inline-block;
-  width: 310px;
+  width: 312px;
 }
 
 div.status-filter ul.status-list li {
